<resources>
    <string name="app_name">Kalkulator</string>
    <string name="divide">÷</string>
    <string name="backspace">⌫</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="equal">=</string>
    <string name="multipl">×</string>
    <string name="_0">0</string>
    <string name="period">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="ans">Ans</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="sqrt">√</string>
    <string name="lbr">(</string>
    <string name="rbr">)</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="graph">Graph</string>
    <string name="title_activity_function_input">FunctionInputActivity</string>
    <string name="dash">-</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="x">X</string>
    <string name="f_x">f(x) =</string>
</resources>
